force-app/main/default/objects/BillDetail__c/BillDetail__c.object-meta.xml
<CustomObject>
    <label>請求明細</label>
    <nameField>
        <displayFormat>BD-{000000000}</displayFormat>
        <label>請求明細ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>