force-app/main/default/objects/BillDetail__c/fields/Change__c.field-meta.xml
<CustomField>
    <fullName>Change__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>入替</label>
    <referenceTo>Change__c</referenceTo>
    <relationshipLabel>請求明細</relationshipLabel>
    <relationshipName>Change_BillDetail</relationshipName>
    <type>Lookup</type>
</CustomField>