force-app/main/default/objects/BillDetail__c/fields/ConditionChange__c.field-meta.xml
<CustomField>
    <fullName>ConditionChange__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>条件変更</label>
    <referenceTo>ConditionChange__c</referenceTo>
    <relationshipLabel>請求明細</relationshipLabel>
    <relationshipName>ConditionChange_BillDetail</relationshipName>
    <type>Lookup</type>
</CustomField>