force-app/main/default/objects/BillDetail__c/fields/ConsignmentTotal__c.field-meta.xml
<CustomField>
    <fullName>ConsignmentTotal__c</fullName>
    <label>委合計</label>
    <summarizedField>BillDetailExpenseItem__c.CommitAmount__c</summarizedField>
    <summaryForeignKey>BillDetailExpenseItem__c.BillDetail__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>