force-app/main/default/objects/BillDetail__c/fields/MailingFee__c.field-meta.xml
<CustomField>
    <fullName>MailingFee__c</fullName>
    <label>郵送手数料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>