force-app/main/default/objects/BillDetail__c/fields/NameChangeFee__c.field-meta.xml
<CustomField>
    <fullName>NameChangeFee__c</fullName>
    <label>名義変更手数料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>