force-app/main/default/objects/BillDetail__c/fields/Renewal__c.field-meta.xml
<CustomField>
    <fullName>Renewal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>更新</label>
    <referenceTo>Renewal__c</referenceTo>
    <relationshipLabel>請求明細</relationshipLabel>
    <relationshipName>Renewal_BillDetail</relationshipName>
    <type>Lookup</type>
</CustomField>