force-app/main/default/objects/BillDetail__c/fields/RoomNum__c.field-meta.xml
<CustomField>
    <fullName>RoomNum__c</fullName>
    <label>号室</label>
    <length>255</length>
    <type>Text</type>
</CustomField>