force-app/main/default/objects/BillDetail__c/fields/TotalAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalAmount__c</fullName>
    <label>請求合計</label>
    <summarizedField>BillDetailExpenseItem__c.Amount__c</summarizedField>
    <summaryForeignKey>BillDetailExpenseItem__c.BillDetail__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>